--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "filerabit",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IasonArgyrakis/fileRabit.git"
+  },
   "keywords": [],
-  "author": "",
+  "author": "Json Argyrakis",
   "license": "ISC",
   "dependencies": {
     "dree": "^2.8.3",
